# SamHan-FGT-Parser

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
app/: __init__.py  main.py  parser_core.py
public/: index.html
scripts/: add_license_headers.py  fetch_sspl_license.py
src/: exporters.rs  main.rs  parser.rs
