# SPDX-License-Identifier: MIT
[package]
name = "SamHan-fgt-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GUI-only, cross-platform FortiGate configuration parser (Rust + egui)"
authors = ["Your Name"]

[dependencies]
eframe = { version = "0.28", features = ["default_fonts","glow"] }
egui = "0.28"
egui_extras = { version = "0.28", features = ["serde"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
parking_lot = "0.12"
